--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,12 @@
-sync-to-github:
+push-to-github:
   image: alpine/git
   script:
-    - git clone --bare https://gitlab.com/kishore1307/blog.git
-    - cd blog.git
-    - git push --mirror https://github.com/kishore1307/blob.git
-  only:
-    - master
+    - git config --global user.email "kishore.kumar949464@gmail.com"
+    - git config --global user.name "kishore1307"
+    - git clone https://gitlab.com/kishore1307/blog.git
+    - cd blog
+    - git remote add upstream https://github.com/kishore1307/blob.git
+    - git fetch upstream
+    - git checkout master
+    - git merge upstream/master
+    - git push origin master
