--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ push-to-github:
     - git config --global user.email "kishore.kumar949464@gmail.com"
     - git config --global user.name "kishore1307"
     - git clone https://gitlab.com/kishore1307/blog.git
+    - ls -ltr
     - cd blog
     - git remote add upstream https://github.com/kishore1307/blob.git
     - git fetch upstream
