--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,8 @@
-push-to-github:
+sync-to-github:
   image: alpine/git
   script:
-    - git config --global user.email "kishore.kumar949464@gmail.com"
-    - git config --global user.name "kishore1307"
-    - git clone https://github.com/kishore1307/blob.git
-    - ls -ltr
-    - cd blob
-    - git remote add upstream https://gitlab.com/kishore1307/blob.git
-    - git fetch upstream
-    - git checkout master
-    - git merge upstream/master
-    - git push origin master
+    - git clone --bare https://gitlab.com/kishore1307/blog.git
+    - cd blog.git
+    - git push --mirror https://kishore1307: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@github.com/kishore1307/blob.git
+  only:
+    - master
